<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mis Listas de Compras</string>
    <string name="title_activity_ref">RefActivity</string>
    <string name="error_list_insertion">Hubo un error al crear una nueva lista</string>
    <string name="error_product_insertion">Hubo un error al insertar un producto a la lista</string>
    <string name="product_inserted">¡Producto insertado!</string>
    <string name="product_deleted">¡Producto eliminado!</string>
    <string name="product_updated">¡Producto actualizado!</string>
    <string name="error_empty_fields">Hay campos sin rellenar…</string>
    <string name="supermarket_lists">Listas de Compras</string>
    <string name="nombre_del_producto">Nombre del producto:</string>
    <string name="cantidad_comprada">Cantidad comprada:</string>
    <string name="precio">Precio: $</string>
    <string name="total_comprando">Total comprando: $</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="quitar_del_carrito">Quitar del Carrito</string>
    <string name="modificar">Modificar</string>
    <string name="titulo_pop_up">Opciones</string>
    <string name="re_preguntar">¿Qué hacemos con esta lista?</string>
    <string name="eliminar_lista">Borrar lista</string>
    <string name="cambiar_nombre">Cambiarle el nombre</string>
    <string name="totalGastadoTitulo">Pagado: $</string>
    <string name="duplicarLista">¡Duplicar esta Lista!</string>
    <string name="sin_nombre">Sin nombre</string>
    <string name="lista_duplicada">Lista duplicada</string>
    <string name="nuevo_nombre_para_la_lista">Nuevo nombre para la lista:</string>
    <string name="ok">Ok</string>
</resources>
