<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="415dp"
    android:gravity="center"
    android:background="@android:color/white"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ID producto:"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/idProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""/>
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/productNameEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_producto"
            android:maxLines="1"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/countEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad_comprada"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/priceEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_comprando"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text=""
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        style="@style/RaisedButtonDark"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/agregar_al_carrito"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_with_corners"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/modificar"
        style="@style/RaisedButtonDark"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_with_corners"
        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/quitar_del_carrito"
        style="@style/RaisedButtonDark"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_with_corners"
        />
</android.support.design.widget.AppBarLayout>